# vwio_eskf

./: .gitignore  CMakeLists.txt  README.md  package.xml
dataset/20240419_record/: sensor_sync.bag  sensor_sync_1.bag  sensor_sync_3.bag
dataset/fis_ieskf_20241008/: available.txt  ieskf_synced_20241008_QuickTurnA.bag  ieskf_synced_20241008_QuickTurnB.bag  ieskf_synced_20241008_SlowTurnA.bag  ieskf_synced_20241008_SlowTurnB.bag  ieskf_synced_20241008_Straight.bag  ieskf_synced_20241008_StraightA.bag
dataset/ieskf_without_img_20240729/: ieskf_E.bag
docs/: vwio_ESKF_Theory.html  vwio_ESKF_Theory.md
evo_test/: plot.py
evo_test/20240606/: plot.py  wo_pose.tum
evo_test/sensor_sync_6/: wo_pose.tum  wvo_pose.tum
evo_test/sensor_sync_6/plot_sync_6/: eskf.tum  eskf_fis.tum  fis_eskf_20240713_sensor_6.bag  wio_pose.tum
evo_test/sensor_sync_6_Nofilter/plot_sync_6_Nofilter/: state_pose.tum  wio_pose.tum  wo_pose.tum  wvo_pose.tum
evo_test/sensor_sync_7/: state_pose.tum  wo_pose.tum  wvo_pose.tum
evo_test/sensor_sync_7/plot_sync_7/: plot_sync_7.py  wio_pose.tum
evo_test/sensor_sync_8/: wio_pose.tum  wvo_pose.tum
evo_test/sensor_sync_8/plot_sync_8/: eskf.tum  eskf_fis.tum  fis_eskf_20240713_sensor_8.bag
evo_test/sensor_sync_9/: state_pose.tum  wio_pose.tum  wo_pose.tum  wvo_pose.tum
include/: eskf.h  filter.h  fis_getdata.h  ros_interface.h  state_variable.h  vo_optimizer.h
launch/: fis_eskf.launch  fis_eskf_record.launch  odom_imu_gnss_eskf_localization.launch  record.launch  visual_imu_odom_eskf_localization.launch
msg/: Q1Data.msg  V1Data.msg  WOFISData.msg
rviz/: imu_gnss_eskf_localization.rviz  vwio_eskf_localization.rviz
src/: eskf_localization.cpp  odometry_publisher.cpp
